# HealthBot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
audits/: 2026-03-04-codex-v3-findings.json  2026-03-04-codex-v3.md
config/: app.json
docs/: AUDIT_2026-03-02_CONSOLIDATED.md  AUDIT_2026-03-02_DEEP_AUDIT_V3.md  AUDIT_2026-03-02_DEEP_AUDIT_V4_POSTFIX.md  AUDIT_2026-03-02_FIX_VERIFICATION_MATRIX.md  AUDIT_2026-03-02_LATEST_FINDINGS.md  AUDIT_2026-03-02_PREVIOUS_FINDINGS.md  BACKUP_RESTORE.md  CODEBASE_HARDENING_RECOMMENDATIONS.md  FASTEN_SETUP.md  OPENCLAW_SETUP.md  fasten-docker-compose.yml
eval/: capture.py  golden_cases.jsonl  pipeline.py  privacy_cases.jsonl  runner.py  unit_cases.jsonl
scripts/: botctl  doctor.sh  run_bot.sh  verify_portability.sh  verify_research.sh  verify_security.sh
tests/: conftest.py  test_ai_export.py  test_ai_export_intelligence.py  test_anonymize_pipeline.py  test_anonymizer.py  test_apple_health_auto.py  test_apple_health_import.py  test_appointment_prep.py  test_audit.py  test_audit_report.py  test_background_analysis.py  test_backup_restore.py  test_bot_formatters.py  test_bulk_ops.py  test_chart_dispatch.py  test_chart_generator.py  test_citations.py  test_claude_client.py  test_claude_conversation.py  test_claude_lab_extraction.py  test_clean_db.py  test_clean_sync.py  test_clean_sync_ext.py  test_clinical_doc_parser.py  test_comorbidity.py  test_condition_extractor.py  test_correlate.py  test_csv_export.py  test_delta.py  (+149 more)
(+254 files in other folders)
