[project]
name = "healthbot-terminal"
version = "1.0.0"
description = "Local-first terminal health data vault for macOS -- your health data never leaves your machine"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "cryptography>=43.0",
    "argon2-cffi>=23.1",
    "pdfminer.six>=20231228",
    "lxml>=5.0",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "numpy>=2.0",
    "httpx>=0.27",
    "pillow>=11.0",
    "fpdf2>=2.8",
    "matplotlib>=3.8",
    "python-dateutil>=2.9",
    "defusedxml>=0.7",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
    "pytest-cov>=6.0",
]
nlp = [
    "gliner>=0.2.10",
]
embeddings = [
    "sentence-transformers>=2.6",
]
mcp = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
healthbot = "healthbot.__main__:main"

[project.urls]
Homepage = "https://github.com/cryptoxinu/HealthBot"
Repository = "https://github.com/cryptoxinu/HealthBot"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (>4s, deselect with '-m \"not slow\"')"]
